--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,21 +1,34 @@
-# Node.js
-# Build a general Node.js project with npm.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
-
 trigger:
 - master
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: ubuntu-latest
 
 steps:
 - task: NodeTool@0
+  displayName: Install Node.js
   inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
+    versionSpec: 10.x
 
-- script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
+# - script: |
+#     npm install
+#     npm run build
+#   displayName: 'npm install and build'
+
+- task: Npm@1
+  displayName: npm install
+  inputs:
+    command: install
+
+- task: Npm@1
+  displayName: npm build
+  inputs:
+    command: custom
+    customCommand: run build
+
+- task: Npm@1
+  displayName: npm publish
+  inputs:
+    command: publish
+    publishRegistry: useFeed
+    publishFeed: 36641032-ec0e-44f3-b65d-00055870227b
