--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,6 @@ steps:
   displayName: npm publish
   inputs:
     command: publish
-    workingDir: dist
+    workingDir: dist/auth0-angular
     publishRegistry: useFeed
     publishFeed: 36641032-ec0e-44f3-b65d-00055870227b
