--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "jest",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "format": "prettier --check \"{projects,cypress}/**/*{.js,.ts,.json,.css,.scss,.html,.yaml}\""
   },
   "private": true,
   "dependencies": {
