--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jest": "^25.5.1",
+    "jest-junit": "^10.0.0",
     "jest-marbles": "^2.5.1",
     "jest-preset-angular": "^8.1.3",
     "ng-packagr": "^9.0.0",
