--- a/projects/auth0-angular/package.json
+++ b/projects/auth0-angular/package.json
@@ -18,13 +18,15 @@
   },
   "homepage": "https://github.com/hwouters/auth0-angular#readme",
   "peerDependencies": {
-    "@angular/common": "^9.0.7",
-    "@angular/core": "^9.0.7",
-    "@angular/router": "^9.0.7",
-    "@ngrx/effects": "^9.1.0",
-    "@ngrx/store": "^9.1.0",
-    "@auth0/auth0-spa-js": "^1.7.0",
-    "rxjs": "^6.5.4",
-    "tslib": "^1.10.0"
+    "@angular/common": "^10.0.0",
+    "@angular/core": "^10.0.0",
+    "@angular/router": "^10.0.0",
+    "@ngrx/effects": "^10.0.0",
+    "@ngrx/store": "^10.0.0",
+    "@auth0/auth0-spa-js": "^1.10.0",
+    "rxjs": "^6.5.4"
+  },
+  "dependencies": {
+    "tslib": "^2.0.0"
   }
 }
