--- a/projects/auth0-angular/package.json
+++ b/projects/auth0-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thecla/auth0-angular",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0",
   "author": "Hendrik Wouters",
   "description": "Angular module using NGRX to authenticate with Auth0",
   "repository": {
