Update to NG 12

--- a/angular.json
+++ b/angular.json
@@ -72,10 +72,15 @@
             "main": "projects/sample-app/src/main.ts",
             "polyfills": "projects/sample-app/src/polyfills.ts",
             "tsConfig": "projects/sample-app/tsconfig.app.json",
-            "aot": true,
             "assets": ["projects/sample-app/src/favicon.ico", "projects/sample-app/src/assets"],
             "styles": ["projects/sample-app/src/styles.css"],
-            "scripts": []
+            "scripts": [],
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "buildOptimizer": false,
+            "sourceMap": true,
+            "optimization": false,
+            "namedChunks": true
           },
           "configurations": {
             "production": {
