--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,15 @@
               "tsConfig": "projects/auth0-angular/tsconfig.lib.prod.json"
             }
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/auth0-angular/**/*.ts",
+              "projects/auth0-angular/**/*.html"
+            ]
+          }
         }
       }
     },
@@ -40,6 +49,15 @@
               "tsConfig": "projects/b2c-angular/tsconfig.lib.prod.json"
             }
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/b2c-angular/**/*.ts",
+              "projects/b2c-angular/**/*.html"
+            ]
+          }
         }
       }
     },
@@ -58,8 +76,13 @@
             "main": "projects/sample-app/src/main.ts",
             "polyfills": "projects/sample-app/src/polyfills.ts",
             "tsConfig": "projects/sample-app/tsconfig.app.json",
-            "assets": ["projects/sample-app/src/favicon.ico", "projects/sample-app/src/assets"],
-            "styles": ["projects/sample-app/src/styles.css"],
+            "assets": [
+              "projects/sample-app/src/favicon.ico",
+              "projects/sample-app/src/assets"
+            ],
+            "styles": [
+              "projects/sample-app/src/styles.css"
+            ],
             "scripts": [],
             "vendorChunk": true,
             "extractLicenses": false,
@@ -115,12 +138,22 @@
           "options": {
             "browserTarget": "sample-app:build"
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/sample-app/**/*.ts",
+              "projects/sample-app/**/*.html"
+            ]
+          }
         }
       }
     }
   },
   "cli": {
-    "analytics": false
+    "analytics": false,
+    "defaultCollection": "@angular-eslint/schematics"
   },
   "defaultProject": "sample-app"
 }
