--- a/package.json
+++ b/package.json
@@ -30,12 +30,21 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.0.4",
+    "@angular-eslint/builder": "13.0.1",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/schematics": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.3",
     "@angular/language-service": "~13.0.3",
     "@types/jest": "^27.0.3",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
+    "eslint": "^8.2.0",
+    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-ngrx": "^2.0.1",
     "jest": "^27.4.3",
     "jest-junit": "^13.0.0",
     "jest-marbles": "^3.0.2",
@@ -43,7 +52,6 @@
     "ng-packagr": "^13.1.1",
     "prettier": "^2.5.1",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.3",
     "typescript": "~4.4.4"
   }
 }
