--- a/projects/auth0-angular/package.json
+++ b/projects/auth0-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thecla/auth0-angular",
-  "version": "5.0.0",
+  "version": "5.0.1",
   "author": "Hendrik Wouters",
   "description": "Angular module using NGRX to authenticate with Auth0",
   "repository": {
@@ -23,8 +23,7 @@
     "@angular/router": "^13.0.0",
     "@ngrx/effects": "^13.0.0",
     "@ngrx/store": "^13.0.0",
-    "@auth0/auth0-spa-js": "^1.15.0",
-    "rxjs": "^6.5.4"
+    "@auth0/auth0-spa-js": "^1.15.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
