--- a/projects/b2c-angular/package.json
+++ b/projects/b2c-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thecla/b2c-angular",
-  "version": "5.0.0",
+  "version": "5.0.1",
   "author": "Hendrik Wouters",
   "description": "Angular module using NGRX to authenticate with Azure AD B2C",
   "repository": {
@@ -24,8 +24,7 @@
     "@angular/router": "^13.0.0",
     "@azure/msal-browser": "^2.7.0",
     "@ngrx/effects": "^13.0.0",
-    "@ngrx/store": "^13.0.0",
-    "rxjs": "^6.5.4"
+    "@ngrx/store": "^13.0.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
