--- a/package.json
+++ b/package.json
@@ -11,47 +11,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.3",
-    "@angular/common": "~13.0.3",
-    "@angular/compiler": "~13.0.3",
-    "@angular/core": "~13.0.3",
-    "@angular/forms": "~13.0.3",
-    "@angular/platform-browser": "~13.0.3",
-    "@angular/platform-browser-dynamic": "~13.0.3",
-    "@angular/router": "~13.0.3",
+    "@angular/animations": "^14.0.2",
+    "@angular/common": "^14.0.2",
+    "@angular/compiler": "^14.0.2",
+    "@angular/core": "^14.0.2",
+    "@angular/forms": "^14.0.2",
+    "@angular/platform-browser": "^14.0.2",
+    "@angular/platform-browser-dynamic": "^14.0.2",
+    "@angular/router": "^14.0.2",
     "@auth0/auth0-spa-js": "^1.19.3",
     "@azure/msal-browser": "^2.20.0",
-    "@ngrx/effects": "^13.0.2",
-    "@ngrx/store": "^13.0.2",
-    "@ngrx/store-devtools": "^13.0.2",
-    "rxjs": "~7.4.0",
+    "@ngrx/effects": "^14.0.0",
+    "@ngrx/store": "^14.0.0",
+    "@ngrx/store-devtools": "^14.0.0",
+    "rxjs": "~7.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.4",
-    "@angular-eslint/builder": "13.0.1",
-    "@angular-eslint/eslint-plugin": "13.0.1",
-    "@angular-eslint/eslint-plugin-template": "13.0.1",
-    "@angular-eslint/schematics": "13.0.1",
-    "@angular-eslint/template-parser": "13.0.1",
-    "@angular/cli": "~13.0.4",
-    "@angular/compiler-cli": "~13.0.3",
-    "@angular/language-service": "~13.0.3",
+    "@angular-devkit/build-angular": "^14.0.2",
+    "@angular-eslint/builder": "14.0.0",
+    "@angular-eslint/eslint-plugin": "14.0.0",
+    "@angular-eslint/eslint-plugin-template": "14.0.0",
+    "@angular-eslint/schematics": "14.0.0",
+    "@angular-eslint/template-parser": "14.0.0",
+    "@angular/cli": "^14.0.2",
+    "@angular/compiler-cli": "^14.0.2",
+    "@angular/language-service": "^14.0.2",
     "@hirez_io/observer-spy": "^2.2.0",
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^28.1.3",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "eslint": "^8.2.0",
-    "eslint-plugin-jest": "^25.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "^8.18.0",
+    "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-ngrx": "^2.0.1",
-    "jest": "^27.4.3",
-    "jest-junit": "^13.0.0",
-    "jest-preset-angular": "^11.0.1",
-    "ng-packagr": "^13.1.1",
+    "jest": "^28.1.1",
+    "jest-junit": "^14.0.0",
+    "jest-preset-angular": "^12.1.0",
+    "ng-packagr": "^14.0.2",
     "prettier": "^2.5.1",
     "ts-node": "~8.3.0",
-    "typescript": "~4.4.4"
+    "typescript": "~4.7.4"
   }
 }
