Remove jest-marble dependency

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.3",
     "@angular/language-service": "~13.0.3",
+    "@hirez_io/observer-spy": "^2.2.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
@@ -47,7 +48,6 @@
     "eslint-plugin-ngrx": "^2.0.1",
     "jest": "^27.4.3",
     "jest-junit": "^13.0.0",
-    "jest-marbles": "^3.0.2",
     "jest-preset-angular": "^11.0.1",
     "ng-packagr": "^13.1.1",
     "prettier": "^2.5.1",
