--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,14 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "strict": true,
-    "target": "es2020",
+    "target": "ES2022",
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2018", "dom"],
     "paths": {
       "@thecla/auth-angular": ["dist/auth0-angular"]
       // "@thecla/auth-angular": ["dist/b2c-angular"]
-    }
+    },
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "strictTemplates": true,
