--- a/package.json
+++ b/package.json
@@ -11,47 +11,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0",
-    "@angular/common": "^18.0.0",
-    "@angular/compiler": "^18.0.0",
-    "@angular/core": "^18.0.0",
-    "@angular/forms": "^18.0.0",
-    "@angular/platform-browser": "^18.0.0",
-    "@angular/platform-browser-dynamic": "^18.0.0",
-    "@angular/router": "^18.0.0",
+    "@angular/animations": "^19.0.3",
+    "@angular/common": "^19.0.3",
+    "@angular/compiler": "^19.0.3",
+    "@angular/core": "^19.0.3",
+    "@angular/forms": "^19.0.3",
+    "@angular/platform-browser": "^19.0.3",
+    "@angular/platform-browser-dynamic": "^19.0.3",
+    "@angular/router": "^19.0.3",
     "@auth0/auth0-spa-js": "^2.1.2",
     "@azure/msal-browser": "^3.14.0",
-    "@ngrx/effects": "^18.0.0",
-    "@ngrx/operators": "^18.0.0",
-    "@ngrx/store": "^18.0.0",
-    "@ngrx/store-devtools": "^18.0.0",
+    "@ngrx/effects": "^19.0.0",
+    "@ngrx/operators": "^19.0.0",
+    "@ngrx/store": "^19.0.0",
+    "@ngrx/store-devtools": "^19.0.0",
     "rxjs": "~7.5.5",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.1",
-    "@angular-eslint/builder": "18.0.1",
-    "@angular-eslint/eslint-plugin": "18.0.1",
-    "@angular-eslint/eslint-plugin-template": "18.0.1",
-    "@angular-eslint/schematics": "18.0.1",
-    "@angular-eslint/template-parser": "18.0.1",
-    "@angular/cli": "^18.0.1",
-    "@angular/compiler-cli": "^18.0.0",
-    "@angular/language-service": "^18.0.0",
+    "@angular-devkit/build-angular": "^19.0.4",
+    "@angular-eslint/builder": "19.0.2",
+    "@angular-eslint/eslint-plugin": "19.0.2",
+    "@angular-eslint/eslint-plugin-template": "19.0.2",
+    "@angular-eslint/schematics": "19.0.2",
+    "@angular-eslint/template-parser": "19.0.2",
+    "@angular/cli": "^19.0.4",
+    "@angular/compiler-cli": "^19.0.3",
+    "@angular/language-service": "^19.0.3",
     "@hirez_io/observer-spy": "^2.2.0",
-    "@types/jest": "^29.5.8",
-    "@types/node": "^20.12.12",
-    "@typescript-eslint/eslint-plugin": "^7.10.0",
-    "@typescript-eslint/parser": "^7.10.0",
-    "eslint": "^8.53.0",
-    "eslint-plugin-jest": "^28.5.0",
-    "eslint-plugin-ngrx": "^2.1.4",
+    "@ngrx/eslint-plugin": "^19.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.2",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
+    "eslint": "^9.17.0",
+    "eslint-formatter-visualstudio": "^8.40.0",
+    "eslint-plugin-jest": "^28.9.0",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
-    "jest-preset-angular": "^14.1.0",
-    "ng-packagr": "^18.0.0",
-    "prettier": "^3.1.0",
+    "jest-preset-angular": "^14.4.2",
+    "ng-packagr": "^19.0.1",
+    "prettier": "^3.4.2",
     "ts-node": "~8.3.0",
-    "typescript": "~5.4.5"
+    "typescript": "~5.6.3"
   }
 }
