--- a/package.json
+++ b/package.json
@@ -5,54 +5,51 @@
     "ng": "ng",
     "start": "ng serve -o --hmr",
     "build": "ng build",
-    "test": "jest",
+    "test": "ng test",
     "lint": "ng lint",
     "format": "prettier --check \"projects/**/*{.js,.ts,.json,.css,.scss,.html,.yaml}\""
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.3",
-    "@angular/common": "^19.0.3",
-    "@angular/compiler": "^19.0.3",
-    "@angular/core": "^19.0.3",
-    "@angular/forms": "^19.0.3",
-    "@angular/platform-browser": "^19.0.3",
-    "@angular/platform-browser-dynamic": "^19.0.3",
-    "@angular/router": "^19.0.3",
-    "@auth0/auth0-spa-js": "^2.1.2",
-    "@azure/msal-browser": "^3.14.0",
-    "@ngrx/effects": "^19.0.0",
-    "@ngrx/operators": "^19.0.0",
-    "@ngrx/store": "^19.0.0",
-    "@ngrx/store-devtools": "^19.0.0",
+    "@angular/animations": "^20.1.4",
+    "@angular/common": "^20.1.4",
+    "@angular/compiler": "^20.1.4",
+    "@angular/core": "^20.1.4",
+    "@angular/forms": "^20.1.4",
+    "@angular/platform-browser": "^20.1.4",
+    "@angular/platform-browser-dynamic": "^20.1.4",
+    "@angular/router": "^20.1.4",
+    "@auth0/auth0-spa-js": "^2.3.0",
+    "@azure/msal-browser": "^4.18.0",
+    "@ngrx/effects": "^20.0.0",
+    "@ngrx/operators": "^20.0.0",
+    "@ngrx/store": "^20.0.0",
+    "@ngrx/store-devtools": "^20.0.0",
     "rxjs": "~7.5.5",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.4",
-    "@angular-eslint/builder": "19.0.2",
-    "@angular-eslint/eslint-plugin": "19.0.2",
-    "@angular-eslint/eslint-plugin-template": "19.0.2",
-    "@angular-eslint/schematics": "19.0.2",
-    "@angular-eslint/template-parser": "19.0.2",
-    "@angular/cli": "^19.0.4",
-    "@angular/compiler-cli": "^19.0.3",
-    "@angular/language-service": "^19.0.3",
+    "@angular-devkit/build-angular": "^20.1.4",
+    "@angular-eslint/builder": "20.1.1",
+    "@angular-eslint/eslint-plugin": "20.1.1",
+    "@angular-eslint/eslint-plugin-template": "20.1.1",
+    "@angular-eslint/schematics": "20.1.1",
+    "@angular-eslint/template-parser": "20.1.1",
+    "@angular/cli": "^20.1.4",
+    "@angular/compiler-cli": "^20.1.4",
+    "@angular/language-service": "^20.1.4",
     "@hirez_io/observer-spy": "^2.2.0",
-    "@ngrx/eslint-plugin": "^19.0.0",
-    "@types/jest": "^29.5.14",
+    "@ngrx/eslint-plugin": "^20.0.0",
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
-    "eslint": "^9.17.0",
+    "eslint": "^9.32.0",
     "eslint-formatter-visualstudio": "^8.40.0",
-    "eslint-plugin-jest": "^28.9.0",
-    "jest": "^29.7.0",
-    "jest-junit": "^16.0.0",
-    "jest-preset-angular": "^14.4.2",
-    "ng-packagr": "^19.0.1",
-    "prettier": "^3.4.2",
+    "jsdom": "^26.1.0",
+    "ng-packagr": "^20.1.0",
+    "prettier": "^3.6.2",
     "ts-node": "~8.3.0",
-    "typescript": "~5.6.3"
+    "typescript": "~5.8.3",
+    "vitest": "^3.1.4"
   }
 }
